dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(gtkqtengine, 0.7) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

KDE_USE_QT(3.0.0)
AC_PATH_KDE
#MIN_CONFIG(3.0.0)

#PKG_CHECK_MODULES(GTK1, gtk+ >= 1.2.0, use_gtk1="yes",use_gtk1="no")
PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.2.0, use_gtk2="yes",use_gtk2="no")
PKG_CHECK_MODULES(LIBBONOBOUI, libbonoboui-2.0 >= 2.4.0, use_libbonoboui="yes",use_libbonoboui="no")

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
GTK_LIBPREFIX=`$PKG_CONFIG --variable=libdir gtk+-2.0`
GTK_PREFIX=`$PKG_CONFIG --variable=prefix gtk+-2.0`
#GTK1_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+`
#GTK1_LIBPREFIX=`$PKG_CONFIG --variable=libdir gtk+`
#GTK1_PREFIX=`$PKG_CONFIG --variable=prefix gtk+`
LIBBONOBOUI_LIBPREFIX=`$PKG_CONFIG --variable=libdir libbonoboui-2.0`
LIBBONOBOUI_PREFIX=`$PKG_CONFIG --variable=prefix libbonoboui-2.0`
KDE_PREFIX=`$KDECONFIG --prefix`
AC_SUBST(QTENGINE_CFLAGS)
AC_SUBST(QTENGINE_LIBS)
AC_SUBST(GTK_VERSION)
AC_SUBST(GTK_LIBPREFIX)
AC_SUBST(GTK_PREFIX)
#AC_SUBST(GTK1_VERSION)
#AC_SUBST(GTK1_LIBPREFIX)
#AC_SUBST(GTK1_PREFIX)
AC_SUBST(KDE_PREFIX)
#AC_SUBST(GTK1_CFLAGS)
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)
AC_SUBST(LIBBONOBOUI_CFLAGS)
AC_SUBST(LIBBONOBOUI_LIBS)

dnl PACKAGE set before
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ autopackage/Makefile ])
AC_CONFIG_FILES([ autopackage/default.apspec ])
#AC_CONFIG_FILES([ gtk1/Makefile ])
AC_CONFIG_FILES([ src/Makefile ])
AC_CONFIG_FILES([ po/Makefile ])
AC_CONFIG_FILES([ kcm_gtk/Makefile ])
AC_OUTPUT

if test "x$use_libbonoboui" = "xno"; then
  echo ""
  echo "********************************************************************"
  echo " WARNING: You do not have the bonobo development packages installed"
  echo " These are not required, but strongly recommended, as they improve"
  echo " some aspects of the theme engine."
  echo "********************************************************************"
  echo ""
else
  AC_DEFINE([HAVE_BONOBO], [1], [Define to 1 to enable Bonobo code])
fi

if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""    
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
