# Sources
SET(GTK-QT-SOURCES
	qt_main.c
	qt_rc_style.c
	qt_theme_draw.c
	wrapper.cpp
	engine.cpp
	utilities.cpp
	colormapper.cpp
	rcproperties.cpp)

ADD_LIBRARY(qt4engine SHARED ${GTK-QT-SOURCES})

# Add GTK's cflags
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GTK_CFLAGS} ${BONOBO_CFLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${GTK_CFLAGS} ${BONOBO_CFLAGS}")

TARGET_LINK_LIBRARIES(qt4engine ${GTK_LINK_FLAGS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${BONOBO_LINK_FLAGS} ${X11_X11_LIB})

INSTALL(
	TARGETS qt4engine
	DESTINATION ${INSTALL_PATH_GTK_ENGINES}
	PERMISSIONS
		OWNER_READ OWNER_WRITE OWNER_EXECUTE
		GROUP_READ GROUP_EXECUTE
		WORLD_READ WORLD_EXECUTE
)

INSTALL(
	FILES gtkrc
	DESTINATION "${INSTALL_PATH_GTK_THEMES}/Qt4/gtk-2.0"
)